appId: de.dev.smartvillage.app
---
- assertVisible:
    id: "waterTemperatureWidget"
- tapOn: 
    id: "waterTemperatureWidget"
- tapOn:
    point: "7%,10%"