appId: ${APP_ID}
---
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "WEITER"
- tapOn: "Nein"
